# CleanIO

./: .env-example  .gitignore  README.rst  SampleUsage.py  pyproject.toml
src/cleanio/: CleanIO.py  CleanRead.py  CleanWrite.py
tests/: test_cleanread.py  test_cleanwrite.py
