[tool.poetry]
name = "CleanIO"
version = "0.1.0"
description = "Simple IO using the yield statement."
authors = ["Travis Risner <deeppunster@fastmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
blue = "^0.9.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
